[package]
name = "tororo"
version = "0.1.0"
edition = "2021"
description = "Trivial HTTP server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.52"
clap = { version = "3.0.4", features = ["derive"] }
hyper = { version = "0.14.16", features = ["http1", "server", "stream", "tcp"] }
log = "0.4.14"
simplelog = "0.11.1"
tokio = { version = "1.15.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.6.9", features = ["codec"] }
