[package]
name = "tororo"
version = "0.1.0"
edition = "2021"
description = "Trivial HTTP server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.9", features = ["derive"] }
hyper = { version = "0.14.18", features = ["http1", "server", "stream", "tcp"] }
log = "0.4.16"
simplelog = "0.11.2"
tokio = { version = "1.17.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-util = { version = "0.7.1", features = ["codec"] }
