[package]
name = "tororo"
version = "0.1.0"
edition = "2021"
description = "Trivial HTTP server"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.5", features = ["derive"] }
hyper = { version = "0.14.19", features = ["http1", "server", "stream", "tcp"] }
log = "0.4.17"
simplelog = "0.12.0"
tokio = { version = "1.19.2", features = ["fs", "macros", "rt-multi-thread", "signal"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
